// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow helpers getDragStyle should return style object for drag selection box 1`] = `
Object {
  "height": 211,
  "left": 270,
  "top": 91,
  "width": 230,
}
`;

exports[`Flow instance methods onConnectorDrop should do NodeEditor work if the user is not dragging back 1`] = `
Array [
  Object {
    "originalAction": Object {
      "text": "",
      "type": "send_msg",
      "uuid": "04f59957-22e5-48cf-b26a-aad37f770db1",
    },
    "originalNode": Object {
      "ghost": true,
      "inboundConnections": Object {
        "3ec23bff-2995-4916-959a-39d31e0e5bea": "059a8daa-0697-44a6-9486-2386cc417e9d",
      },
      "node": Object {
        "actions": Array [
          Object {
            "text": "",
            "type": "send_msg",
            "uuid": "04f59957-22e5-48cf-b26a-aad37f770db1",
          },
        ],
        "exits": Array [
          Object {
            "destination_uuid": null,
            "uuid": "4993f221-2381-47f9-97c3-878dc5ef258c",
          },
        ],
        "uuid": "712ff538-daa1-4ab2-8ce3-762bc0bf7f12",
      },
      "ui": Object {
        "position": Object {
          "left": 0,
          "top": 0,
        },
        "type": "execute_actions",
      },
    },
  },
]
`;

exports[`Flow render should render NodeEditor 1`] = `
Object {
  "plumberConnectExit": [MockFunction],
  "plumberRepaintForDuration": [MockFunction],
}
`;

exports[`Flow render should render NodeEditor 2`] = `
<div
  onDoubleClick={[Function]}
>
  <Canvas
    draggables={
      Array [
        Object {
          "ele": [Function],
          "position": Object {
            "left": 0,
            "top": 0,
          },
          "uuid": "4fac7935-d13b-4b36-bf15-98075dca822a",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 300,
            "top": 120,
          },
          "uuid": "46e8d603-8e5d-4435-97dd-1333291aafca",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 440,
            "top": 240,
          },
          "uuid": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 200,
            "top": 340,
          },
          "uuid": "e2ecc8de-9774-4b74-a0dc-ca8aea123227",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 680,
            "top": 340,
          },
          "uuid": "533b64e2-5906-4d33-a8e9-64f1cb6c20dd",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 640,
            "top": 460,
          },
          "uuid": "882f8022-7256-4b1c-abf3-7b180f5e7e24",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 300,
            "top": 520,
          },
          "uuid": "059a8daa-0697-44a6-9486-2386cc417e9d",
        },
      ]
    }
    mergeEditorState={[MockFunction]}
    onDragging={[Function]}
    onUpdatePositions={[MockFunction]}
    uuid="679d32c1-9996-48b4-9691-e869507b9e46"
  >
    <Connect(NodeEditor)
      plumberConnectExit={[MockFunction]}
      plumberRepaintForDuration={[MockFunction]}
    />
  </Canvas>
</div>
`;

exports[`Flow render should render Simulator 1`] = `
<div
  onDoubleClick={[Function]}
>
  <Canvas
    draggables={
      Array [
        Object {
          "ele": [Function],
          "position": Object {
            "left": 0,
            "top": 0,
          },
          "uuid": "4fac7935-d13b-4b36-bf15-98075dca822a",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 300,
            "top": 120,
          },
          "uuid": "46e8d603-8e5d-4435-97dd-1333291aafca",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 440,
            "top": 240,
          },
          "uuid": "bc978e00-2f3d-41f2-87c1-26b3f14e5925",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 200,
            "top": 340,
          },
          "uuid": "e2ecc8de-9774-4b74-a0dc-ca8aea123227",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 680,
            "top": 340,
          },
          "uuid": "533b64e2-5906-4d33-a8e9-64f1cb6c20dd",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 640,
            "top": 460,
          },
          "uuid": "882f8022-7256-4b1c-abf3-7b180f5e7e24",
        },
        Object {
          "ele": [Function],
          "position": Object {
            "left": 300,
            "top": 520,
          },
          "uuid": "059a8daa-0697-44a6-9486-2386cc417e9d",
        },
      ]
    }
    mergeEditorState={[MockFunction]}
    onDragging={[Function]}
    onUpdatePositions={[MockFunction]}
    uuid="09294c2a-031e-4e74-9b1c-aec239b2a145"
  >
    <Connect(Simulator)
      Activity={
        Object {
          "clearSimulation": [MockFunction],
          "deregister": [MockFunction],
          "getActiveCount": [MockFunction],
          "getActivity": [MockFunction],
          "getPathCount": [MockFunction],
          "notifyListeners": [MockFunction],
          "registerListener": [MockFunction],
          "setSimulation": [MockFunction],
        }
      }
      mergeEditorState={[MockFunction]}
    />
  </Canvas>
</div>
`;

exports[`Flow render should render dragNode 1`] = `
<Connect(NodeComp)
  Activity={
    Object {
      "clearSimulation": [MockFunction],
      "deregister": [MockFunction],
      "getActiveCount": [MockFunction],
      "getActivity": [MockFunction],
      "getPathCount": [MockFunction],
      "notifyListeners": [MockFunction],
      "registerListener": [MockFunction],
      "setSimulation": [MockFunction],
    }
  }
  data-spec="ghost-node"
  ghost={true}
  key="5349b008-960d-4d8d-a17e-ad99b550ae87"
  nodeUUID="5349b008-960d-4d8d-a17e-ad99b550ae87"
  plumberConnectExit={[MockFunction]}
  plumberMakeSource={[MockFunction]}
  plumberMakeTarget={[MockFunction]}
  plumberRecalculate={[MockFunction]}
  plumberRemove={[MockFunction]}
  plumberRepaintForDuration={[MockFunction]}
  selected={false}
/>
`;
